--- a/test_output.html
+++ b/test_output.html
@@ -41,7 +41,7 @@
         отворения свят на Хайрул и нови летящи острови, решават пъзели и
         използват свободата на придвижване, за да спасят кралството. Играта е
         разработена от Nintendo EPD и Monolith Soft, а издател е Nintendo【668173338624498†L225-L260】.</td>
-<td class="image"><img alt="Изображение" width="200" src="/home/oai/share/xml_video_game_catalog/images/totk.png"></td>
+<td class="image"><img alt="Изображение" width="200" src="./images/totk.png"></td>
 </tr>
 <tr data-genre="g2">
 <td class="title">Elden Ring</td>
@@ -56,7 +56,7 @@
         издаването е на 25 февруари 2022 г. за PlayStation 5/4, Xbox Series X|S,
         Xbox One и Windows; извън Япония издател е Bandai Namco Entertainment,
         а в Япония – FromSoftware【858416695712795†L116-L153】.</td>
-<td class="image"><img alt="Изображение" width="200" src="/home/oai/share/xml_video_game_catalog/images/eldenring.png"></td>
+<td class="image"><img alt="Изображение" width="200" src="./images/eldenring.png"></td>
 </tr>
 <tr data-genre="g3">
 <td class="title">DOOM Eternal</td>
@@ -70,7 +70,7 @@
         Играта излиза на 20 март 2020 г. за Windows, Xbox One, PlayStation 4 и Stadia,
         през декември 2020 г. за Nintendo Switch и през 2021 г. за платформите
         от следващо поколение【345590806197211†L192-L247】.</td>
-<td class="image"><img alt="Изображение" width="200" src="/home/oai/share/xml_video_game_catalog/images/doometernal.png"></td>
+<td class="image"><img alt="Изображение" width="200" src="./images/doometernal.png"></td>
 </tr>
 <tr data-genre="g4">
 <td class="title">Minecraft</td>
@@ -86,7 +86,7 @@
         да събират ресурси, да изработват предмети и да оцеляват. Играта е
         разработена и публикувана от Mojang Studios и е най‑продаваната
         видеоигра в историята【777400238768303†L296-L432】.</td>
-<td class="image"><img alt="Изображение" width="200" src="/home/oai/share/xml_video_game_catalog/images/minecraft.png"></td>
+<td class="image"><img alt="Изображение" width="200" src="./images/minecraft.png"></td>
 </tr>
 <tr data-genre="g5">
 <td class="title">Tetris</td>
@@ -102,7 +102,7 @@
         СССР и се разпространява на разнообразни платформи. Публикувана е
         от различни компании и се счита за един от най‑влиятелните пъзели в
         историята【397473246799368†L134-L152】.</td>
-<td class="image"><img alt="Изображение" width="200" src="/home/oai/share/xml_video_game_catalog/images/tetris.png"></td>
+<td class="image"><img alt="Изображение" width="200" src="./images/tetris.png"></td>
 </tr>
 <tr data-genre="g2">
 <td class="title">The Witcher 3: Wild Hunt</td>
@@ -117,7 +117,7 @@
         Играта излиза на 19 май 2015 г., през октомври 2019 г. за Nintendo Switch
         и през декември 2022 г. за платформите от следващо поколение. Издател е
         CD Projekt【501590420045290†L355-L402】.</td>
-<td class="image"><img alt="Изображение" width="200" src="/home/oai/share/xml_video_game_catalog/images/witcher3.png"></td>
+<td class="image"><img alt="Изображение" width="200" src="./images/witcher3.png"></td>
 </tr>
 <tr data-genre="g6">
 <td class="title">Super Mario Odyssey</td>
@@ -131,7 +131,7 @@
         в множество кралства със своя нов приятел – магическата шапка Cappy – и
         събира Power Moons, за да управлява въздушния кораб Odyssey. Играта
         излиза на 27 октомври 2017 г., а по‑късно и в някои азиатски региони【30768275475321†L17-L31】【30768275475321†L53-L107】.</td>
-<td class="image"><img alt="Изображение" width="200" src="/home/oai/share/xml_video_game_catalog/images/marioodyssey.png"></td>
+<td class="image"><img alt="Изображение" width="200" src="./images/marioodyssey.png"></td>
 </tr>
 <tr data-genre="g7">
 <td class="title">Baldur’s Gate 3</td>
@@ -147,7 +147,7 @@
         следвана от PlayStation 5 през септември 2023 г., macOS през септември
         2023 г., Xbox Series X|S през декември 2023 г. и планирана версия за
         Linux през 2025 г. Разработчик и издател е Larian Studios【167625458483725†L173-L214】.</td>
-<td class="image"><img alt="Изображение" width="200" src="/home/oai/share/xml_video_game_catalog/images/baldursgate3.png"></td>
+<td class="image"><img alt="Изображение" width="200" src="./images/baldursgate3.png"></td>
 </tr>
 </tbody>
 </table>
