--- a/test_output.html
+++ b/test_output.html
@@ -25,7 +25,7 @@
     type="text"
     id="searchBox"
     onkeyup="filterTable()"
-    placeholder="Search by title…"
+    placeholder="Search by title"
   >
 </div>
 
@@ -33,7 +33,7 @@
   <thead>
     <tr>
       <th onclick="sortTable(0, 'string')">Title</th>
-      <th onclick="sortTable(1, 'date')">Release date</th>
+      <th onclick="sortTable(1, 'date')">Release Date</th>
       <th onclick="sortTable(2, 'string')">Genre</th>
       <th onclick="sortTable(3, 'string')">Platforms</th>
       <th onclick="sortTable(4, 'string')">Developer</th>
@@ -52,9 +52,9 @@
       <td class="publishers">Nintendo</td>
       <td class="summary">
         Sequel to Breath of the Wild in which players explore the open world
-        of Hyrule and new floating islands, solve puzzles and use free
-        movement abilities to save the kingdom. The game is developed by
-        Nintendo EPD and Monolith Soft and published by Nintendo.
+        of Hyrule and new floating islands, solve puzzles and use movement
+        abilities to save the kingdom. The game is developed by Nintendo EPD
+        and Monolith Soft and published by Nintendo.
       </td>
       <td class="image">
         <img alt="Image" width="200" src="./images/totk.png">
@@ -71,12 +71,13 @@
       <td class="developers">FromSoftware</td>
       <td class="publishers">FromSoftware, Bandai Namco Entertainment</td>
       <td class="summary">
-        An action role-playing game developed by FromSoftware with worldbuilding
-        contributions from writer George R. R. Martin. It features an open
-        world called the Lands Between with challenging combat and deep lore.
-        It was first released on 25 February 2022 for PlayStation 5/4,
-        Xbox Series X|S, Xbox One and Windows; it is published worldwide by
-        Bandai Namco Entertainment and in Japan by FromSoftware.
+        An action role-playing game developed by FromSoftware with
+        worldbuilding contributions from writer George R. R. Martin. It
+        features an open world called the Lands Between with challenging
+        combat and deep lore. It was first released on 25 February 2022 for
+        PlayStation 5/4, Xbox Series X|S, Xbox One and Windows; it is
+        published worldwide by Bandai Namco Entertainment and in Japan
+        by FromSoftware.
       </td>
       <td class="image">
         <img alt="Image" width="200" src="./images/eldenring.png">
@@ -115,13 +116,13 @@
       <td class="developers">Mojang Studios</td>
       <td class="publishers">Mojang Studios</td>
       <td class="summary">
-        A sandbox game with survival elements, originally created by
-        Markus Persson and later developed by Mojang Studios. The official
-        version was released on 18 November 2011 after an alpha period
-        starting in 2009. Players can freely explore and build in a
-        procedurally generated blocky world, gather resources, craft items
-        and try to survive. It is both developed and published by Mojang
-        Studios and is the best-selling video game in history.
+        A sandbox game with survival elements, originally created by Markus
+        Persson and later developed by Mojang Studios. The official version
+        was released on 18 November 2011 after a public alpha starting in
+        2009. Players can freely explore and build in a procedurally
+        generated blocky world, gather resources, craft items and try to
+        survive. It is both developed and published by Mojang Studios and is
+        the best-selling video game in history.
       </td>
       <td class="image">
         <img alt="Image" width="200" src="./images/minecraft.png">
@@ -133,8 +134,7 @@
       <td class="date">1984-06-06</td>
       <td class="genre">Puzzle</td>
       <td class="platforms">
-        Elektronika 60, IBM PC, Amiga, Atari ST, Apple II, NES, Game Boy
-        and many others
+        Elektronika 60, IBM PC, Amiga, Atari ST, Apple II, NES, Game Boy and many others
       </td>
       <td class="developers">Alexey Pajitnov, Vadim Gerasimov</td>
       <td class="publishers">The Tetris Company</td>
@@ -156,8 +156,7 @@
       <td class="date">2015-05-19</td>
       <td class="genre">Action RPG</td>
       <td class="platforms">
-        Windows, PlayStation 4, Xbox One, Nintendo Switch,
-        PlayStation 5, Xbox Series X|S
+        Windows, PlayStation 4, Xbox One, Nintendo Switch, PlayStation 5, Xbox Series X|S
       </td>
       <td class="developers">CD Projekt RED</td>
       <td class="publishers">CD Projekt</td>
@@ -165,9 +164,9 @@
         An open-world action role-playing game developed by CD Projekt RED.
         Players control Geralt of Rivia, a monster hunter searching for his
         adopted daughter who is pursued by the spectral Wild Hunt. The game
-        launched on 19 May 2015, came to Nintendo Switch in October 2019
-        and received next-generation versions in December 2022. It is
-        published by CD Projekt.
+        launched on 19 May 2015, came to Nintendo Switch in October 2019 and
+        received next-generation versions in December 2022. It is published
+        by CD Projekt.
       </td>
       <td class="image">
         <img alt="Image" width="200" src="./images/witcher3.png">
@@ -194,7 +193,7 @@
     </tr>
 
     <tr data-genre="g7">
-      <td class="title">Baldur’s Gate 3</td>
+      <td class="title">Baldur's Gate 3</td>
       <td class="date">2023-08-03</td>
       <td class="genre">Role-playing</td>
       <td class="platforms">
